@@ -9,6 +9,8 @@
           variable to load plugins in addition to the 'plugins'
           parameter in the configuration file. (diewald)
         - Allow popups in plugin widgets. (diewald)
+        - Set version via KALAMAR_VERSION environment variable.
+          (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
